@@ -7,6 +7,13 @@ ISSUES:
 * fix of a gamm bug whereby a model with no smooths would fail after 
 fitting becuase of a missing smoothing parameter vector.
 
+* fix to bug introduced to gam/bam in 1.7-3, whereby '...' were passed to 
+  gam.control, instead of passing on to fitting routines. 
+
+* fix of some compiler warnings in matrix.c 
+
+* fix to indexing bug in monotonic additive model example in ?pcls.
+
 1.7-4
 
 * Fix for single letter typo bug in C code called by slanczos, could 
